# bill-split-backend-rust

./: Cargo.toml
.github/workflows/: rust.yml
src/: bill.rs  data.rs  lib.rs  main.rs
src/api/: routes.rs
src/api/handlers/: basic_handler.rs  bill_handler.rs  mod.rs
src/config/: data_config.rs  mod.rs  server_config.rs
src/data/: memory.rs  mod.rs
src/models/: bill.rs  currency.rs  item.rs  mod.rs
tests/: integration_test.rs
