[package]
name = "bill-split-backend-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web framework that focuses on ergonomics and modularity.
axum = "~0.7.0"

# Modular reusable components for building robust clients and servers.
tower = "~0.4.13"

# A fast and correct HTTP library.
hyper = { version = "~1.0.1", features = ["full"] } 

# Event-driven, non-blocking I/O platform.
tokio = { version = "~1.34.0", features = ["full"] }

# A serialization/deserialization framework.
serde = { version = "~1.0.193", features = ["derive"] }

# Serde serializion/deserialization of JSON data.
serde_json = { version = "~1.0.108" }
