[package]
name = "billsplit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "~0.7.0"
tower = "~0.4.13"

# A fast and correct HTTP library.
hyper = { version = "~1.0.1", features = ["full"] } 

# Event-driven, non-blocking I/O platform.
tokio = { version = "~1.34.0", features = ["full"] }

# A serialization/deserialization framework.
serde = { version = "~1.0.193", features = ["derive"] }
serde_json = "~1.0.108"
lazy_static = "1.4.0"

[dev-dependencies]
reqwest = { version = "~0.11.4", features = ["json"] }

[dependencies.uuid]
version = "1.7.0"
features = ["serde", "v4"]
